--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "build": "expo export",
+    "build:production": "expo export --platform all",
+    "build:web": "expo export --platform web",
+    "build:preview": "eas build --preview",
+    "build:development": "eas build --profile development",
     "lint": "expo lint"
   },
   "dependencies": {
