--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "build:web": "expo export --platform web",
     "build:preview": "eas build --preview",
     "build:development": "eas build --profile development",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.6",
+    "expo": "54.0.7",
     "expo-camera": "^17.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
@@ -32,7 +37,7 @@
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "^15.0.7",
     "expo-notifications": "^0.32.11",
-    "expo-router": "~6.0.3",
+    "expo-router": "~6.0.4",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -46,10 +51,12 @@
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "victory-native": "^41.20.1",
@@ -62,7 +69,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "jest": "^30.1.3",
+    "jest": "~29.7.0",
     "typescript": "~5.9.2"
   },
   "private": true
