--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-image": "~3.0.8",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "^17.0.8",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "^15.0.7",
     "expo-notifications": "^0.32.11",
@@ -61,7 +62,8 @@
     "react-native-worklets": "0.5.1",
     "victory-native": "^41.20.1",
     "zod": "^4.1.8",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "expo-linear-gradient": "~15.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
