--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@react-native-community/cli": "latest",
     "expo": "54.0.7",
     "expo-camera": "^17.0.7",
     "expo-constants": "~18.0.8",
@@ -52,7 +53,6 @@
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -62,8 +62,7 @@
     "react-native-worklets": "0.5.1",
     "victory-native": "^41.20.1",
     "zod": "^4.1.8",
-    "zustand": "^5.0.8",
-    "expo-linear-gradient": "~15.0.7"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@testing-library/jest-native": "^5.4.3",
