--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
     "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/cli": "latest",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@react-native-community/cli": "latest",
     "expo": "54.0.7",
+    "expo-auth-session": "^7.0.8",
     "expo-camera": "^17.0.7",
     "expo-constants": "~18.0.8",
+    "expo-crypto": "^15.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
