fixed API server is not running

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,6 +15,9 @@ POSTGRES_PASSWORD=smartplants
 REDIS_HOST=redis
 REDIS_PORT=6379
 
+# Database URL (Prisma)
+DATABASE_URL=postgresql://smartplants:smartplants@postgres:5432/smartplants
+
 # External services
 ANALYSIS_API_BASE_URL=http://analysis-api:5000
 
