--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -16,3 +16,15 @@ node_modules/
 
 
 *.env
+.python-version
+*.sqlite3
+*.log.prettier
+.prettierrc
+.prettierignore
+.vscode/
+.idea/
+*.iml
+__pycache__/
+*.pyc
+*.pyo
+.eslintrc.cjs
