--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,13 @@
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "start": "node -r tsconfig-paths/register dist/server.js",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
-    "test": "vitest"
+    "test": "vitest",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
+    "@prisma/client": "^5.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
@@ -35,10 +39,13 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prisma": "^5.11.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
+    "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "@types/supertest": "^2.0.16"
   }
 }
