--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,6 +21,13 @@ DATABASE_URL=postgresql://smartplants:smartplants@postgres:5432/smartplants
 # External services
 ANALYSIS_API_BASE_URL=http://analysis-api:5000
 
+# Auth (replace with real provider values)
+AUTH_JWKS_URI=https://auth.smartplants.dev/.well-known/jwks.json
+AUTH_AUDIENCE=https://api.smartplants.app
+AUTH_ISSUER=https://auth.smartplants.dev/
+AUTH_TOKEN_SECRET=super-secret-string
+AUTH_ACCESS_TOKEN_TTL=3600
+
 # Security
 JWT_JWKS_URI=https://auth.smartplants.dev/.well-known/jwks.json
 JWT_AUDIENCE=https://api.smartplants.app
