--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
+    "bcryptjs": "^2.4.3",
+    "jose": "^5.2.0",
     "helmet": "^7.1.0",
     "pino": "^8.17.0",
     "pino-http": "^8.6.0",
@@ -46,6 +48,7 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
     "vitest": "^1.3.1",
-    "@types/supertest": "^2.0.16"
+    "@types/supertest": "^2.0.16",
+    "@types/bcryptjs": "^2.4.6"
   }
 }
