--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,13 @@
     "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "^6.16.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.19.2",
-    "bcryptjs": "^2.4.3",
-    "jose": "^5.2.0",
     "helmet": "^7.1.0",
+    "jose": "^5.2.0",
     "pino": "^8.17.0",
     "pino-http": "^8.6.0",
     "pino-pretty": "^10.3.1",
@@ -30,9 +30,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
+    "@types/supertest": "^2.0.16",
     "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -41,14 +43,12 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "prisma": "^5.11.0",
     "prettier": "^3.2.5",
+    "prisma": "^6.16.2",
     "rimraf": "^5.0.5",
     "supertest": "^6.3.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.3.1",
-    "@types/supertest": "^2.0.16",
-    "@types/bcryptjs": "^2.4.6"
+    "vitest": "^1.3.1"
   }
 }
