--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build": "expo export",
     "build:production": "expo export --platform all",
@@ -27,21 +27,22 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "54.0.7",
+    "expo": "~54.0.10",
     "expo-auth-session": "^7.0.8",
-    "expo-camera": "^17.0.7",
-    "expo-constants": "~18.0.8",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
     "expo-crypto": "^15.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-image-manipulator": "^14.0.7",
     "expo-image-picker": "^17.0.8",
-    "expo-linear-gradient": "~13.0.2",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-mail-composer": "^15.0.7",
     "expo-notifications": "^0.32.11",
-    "expo-router": "~6.0.4",
+    "expo-router": "~6.0.8",
+    "expo-secure-store": "^15.0.7",
     "expo-sharing": "^14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -55,7 +56,7 @@
     "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-skeleton-placeholder": "^5.2.4",
