backend api optimized auth and analysis service

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,25 +10,25 @@ POSTGRES_PORT=5432
 POSTGRES_DB=smartplants
 POSTGRES_USER=smartplants
 POSTGRES_PASSWORD=smartplants
+DATABASE_URL=postgresql://smartplants:smartplants@postgres:5432/smartplants
 
 # Redis / cache
 REDIS_HOST=redis
 REDIS_PORT=6379
 
-# Database URL (Prisma)
-DATABASE_URL=postgresql://smartplants:smartplants@postgres:5432/smartplants
-
 # External services
 ANALYSIS_API_BASE_URL=http://analysis-api:5000
 
-# Auth (replace with real provider values)
-AUTH_JWKS_URI=https://auth.smartplants.dev/.well-known/jwks.json
-AUTH_AUDIENCE=https://api.smartplants.app
-AUTH_ISSUER=https://auth.smartplants.dev/
-AUTH_TOKEN_SECRET=super-secret-string
-AUTH_ACCESS_TOKEN_TTL=3600
-
-# Security
+# Security / auth
 JWT_JWKS_URI=https://auth.smartplants.dev/.well-known/jwks.json
 JWT_AUDIENCE=https://api.smartplants.app
 JWT_ISSUER=https://auth.smartplants.dev/
+AUTH_JWKS_URI=https://auth.smartplants.dev/.well-known/jwks.json
+AUTH_AUDIENCE=https://api.smartplants.app
+AUTH_ISSUER=https://auth.smartplants.dev/
+AUTH_TOKEN_SECRET=change-me-please
+AUTH_ACCESS_TOKEN_TTL=3600
+
+# Rate limiting
+RATE_LIMIT_GENERAL_LIMIT=120
+RATE_LIMIT_GENERAL_WINDOW_MS=60000
